--- a/frontend/src/sass/register.sass
+++ b/frontend/src/sass/register.sass
@@ -42,3 +42,14 @@ body
   padding: 1.5rem
   border-style: solid
   border-color: #ccc
+
+.hamburger
+  width: 40px
+  height: 40px
+  background-color: red
+.line
+  width: 40px
+  height: 2px
+  color: black
+
+  
