front end işlemleri

--- a/frontend/src/sass/register.sass
+++ b/frontend/src/sass/register.sass
@@ -52,10 +52,10 @@ body
     height: 2px
     color: black
 
-$layout-breakpoint-small: 377px
+$layout-breakpoint-small: 991px
 
 @media (max-width: $layout-breakpoint-small)
   .auth
-    width: 100%
     display: flex
-    justify-content: center
+    flex-direction: column
+
